# rosPEDSim-Simulator

./: README.md
pedsim_simulator/include/pedsim_simulator/: simulator.h
pedsim_simulator/launch/: Altorfer_f1.launch  my.launch  my_rviz.launch  my_rviz_create.launch  test.launch
pedsim_simulator/myscripts/: testLaunch
pedsim_simulator/robot_model/: model.config  model.sdf
pedsim_simulator/src/: simulator.cpp
pedsim_simulator/worlds/: altorfer_v2.world  altorfer_v2_backup.world
visualization/spencer_messages/control/spencer_control_msgs/: CMakeLists.txt  package.xml
visualization/spencer_messages/control/spencer_control_msgs/msg/: CollisionStatus.msg  LocalisationStatus.msg  LocalizationStatus.msg  SafetyRectangle.msg  SetHeadJointPosition.msg  SetHeadJointVelocity.msg  SystemStatus.msg
visualization/spencer_messages/control/spencer_control_msgs/srv/: GetMaxVelocity.srv  ReleaseEmergencyStop.srv  SetEmergencyStop.srv  SetMaxVelocity.srv
visualization/spencer_messages/mapping/spencer_mapping_msgs/: CMakeLists.txt  package.xml
visualization/spencer_messages/mapping/spencer_mapping_msgs/msg/: Annotation.msg  Annotations.msg  Label.msg  LabelGrid.msg  TopologicalMap.msg  TopologicalMapEdge.msg  TopologicalMapNode.msg
visualization/spencer_messages/mapping/spencer_mapping_msgs/srv/: Label.srv  Labels.srv  SetInterestRegion.srv
visualization/spencer_messages/perception/spencer_spokesperson_msgs/: CMakeLists.txt  package.xml
visualization/spencer_messages/perception/spencer_spokesperson_msgs/msg/: Spokesperson.msg
visualization/spencer_messages/planning/spencer_nav_msgs/: .gitignore  CMakeLists.txt  package.xml
visualization/spencer_messages/planning/spencer_nav_msgs/msg/: NavParams.msg  NavigationPlanRequestGeometric.msg  NavigationPlanRequestTopological.msg
visualization/spencer_messages/planning/spencer_nav_msgs/srv/: SetDrivingDirection.srv  StopDriving.srv
visualization/spencer_messages/planning/spencer_task_planner_msgs/: CMakeLists.txt  package.xml
visualization/spencer_messages/planning/spencer_task_planner_msgs/msg/: GuidanceStatus.msg
visualization/spencer_messages/supervision/situation_assessment_msgs/: CMakeLists.txt  package.xml
visualization/spencer_messages/supervision/situation_assessment_msgs/msg/: AreaList.msg  Edge.msg  Fact.msg  FactList.msg  Graph.msg  Group.msg  GroupList.msg  HumanIntention.msg  HumanIntentionList.msg  NamedPose.msg  NamedPoseList.msg  Node.msg  Property.msg
visualization/spencer_messages/supervision/situation_assessment_msgs/srv/: AddArea.srv  DatabaseRequest.srv  GetLocations.srv  GetMap.srv  NameRequest.srv  QueryDatabase.srv  SwitchOrientation.srv
visualization/spencer_messages/supervision/supervision_msgs/: CMakeLists.txt  package.xml
visualization/spencer_messages/supervision/supervision_msgs/action/: Approach.action  GuideGroup.action  MoveTo.action  MoveToPose.action
visualization/spencer_messages/supervision/supervision_msgs/msg/: GuideFollowers.msg  PathInfo.msg  SupervisionStatus.msg  SupervisionStopped.msg
visualization/spencer_messages/supervision/supervision_msgs/srv/: CalculatePath.srv  ChangeDestination.srv  GetConnectedNodes.srv  SetRobotSimStatus.srv
