<?xml version="1.0"?>
<package>

  <name>spencer_spokesperson_msgs</name>
  <version>0.0.0</version>
  <description>Messages used for Spokesperson Recognition</description>

  <maintainer email="m.m.j.w.vanrooij@utwente.nl">Marieke van Rooij</maintainer>
  <author email="m.m.j.w.vanrooij@utwente.nl">Marieke van Rooij</author>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
