<?xml version="1.0"?>
<package>
  <name>spencer_nav_msgs</name>
  <version>0.0.1</version>
  <description>messages used for motion planner and learning</description>

  <maintainer email="harmish@laas.fr">Timm Linder</maintainer>
  <maintainer email="palmieri@informatik.uni-freiburg.de">Luigi Palmieri</maintainer>
  <maintainer email="islas@isir.upmc.fr">Omar Adair Islas Ramírez</maintainer>
  <maintainer email="okal@informatik.uni-freiburg.de">Billy Okal</maintainer>
  
  <license>BSD</license>
  
  <author email="harmish@laas.fr">Harmish Khambhaita</author>
  <author email="palmieri@informatik.uni-freiburg.de">Luigi Palmieri</author>
  <author email="islas@isir.upmc.fr">Omar Adair Islas Ramírez</author>
  <author email="okal@informatik.uni-freiburg.de">Billy Okal</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>spencer_tracking_msgs</build_depend>
  <build_depend>spencer_mapping_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>spencer_tracking_msgs</run_depend>
  <run_depend>spencer_mapping_msgs</run_depend>
</package>
