<?xml version="1.0"?>
<package>
  <name>spencer_task_planner_msgs</name>
  <version>0.0.0</version>
  <description>The spencer_task_planner_msgs package</description>

  <maintainer email="okal@cs.uni-freiburg.de">Billy Okal</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>